package myutil;

public interface IStringFlyweight {
    public String getString();
}
