package myutil;

import application.NameFlyweight;

public class TemporaryPersonalData {

    public NameFlyweight name;
    public String surname;
    public double latitude;
    public double longitude;

    public TemporaryPersonalData() {
    }

}
