@startuml

class ClientMenu{
    +getUi(): IUserInterface
    +getDb(): IDatabase
    +uiLoop(): void
    -menu(): String
}

interface IUserInterface{
    +print(String msg): void
    +println(String msg): void
    +inputInt(): int
    +inputDouble(): double
    +inputString(): String
}

class ConsoleUI implements IUserInterface{
    -BufferedReader reader;
}

class Command<Abstract>{
    +next()
    +tryRun(String command, ClientMenu ctx)
    #run(ClientMenu ctx)
}
note top:Only run() is abstract,\nnext() and tryRun() are\nimplemented and final.

interface IDatabase{
    +addPerson(String name, String surname, double latitude, double longitude): void
    +showAll(): String
    +getJsonOfAll(): String
    +readJson(String json,boolean append): void
}

class Database implements IDatabase
{
    -data: List<PersonalData>
    -commonNames: List<IStringFlyweight>
    -getOrCreateName(String name): IStringFlyweight
}

class ClientDatabase implements IDatabase{
    -db: IDatabase
    -capitalize(String str): String
}

class PersonalData{
    -name: IStringFlyweight
    -surname: String
    -latitude: double
    -longitude: double
    + [setter and getters for all values]()
}

interface IStringFlyweight{
    +getString(): String
}

class NameFlyweight implements IStringFlyweight{
    -name: String
}

class TemporaryPersonalData{

}
note bottom: Used only for\njson to object\nconversion

class Add extends Command
class Read extends Command
class Readd extends Command
class Save extends Command
class Show extends Command

ClientMenu *-- "1 " IUserInterface
ClientMenu *--> "n" Command
ClientMenu *-- "1" IDatabase

Command --> ClientDatabase
ClientDatabase --> Database

Database o-"0..n" PersonalData
Database o-"0..n   " IStringFlyweight
PersonalData .."share" IStringFlyweight
Database "cretaes" ...> NameFlyweight
TemporaryPersonalData . Database
@enduml